Versão estilizada do projeto

--- a/produtos.html
+++ b/produtos.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
+    <meta charset="UTF-8">
+    <meta name=”viewport” content=”width=device-width”>
     <head>
-        <meta charset="UTF-8">
-        <title>Produtos - Barbearia Alura</title>
+        <title>Barbearia Alura</title>
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="style.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@1,600&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
             <div class="caixa">
-                <h1><img src="logo.png"></h1>
+                <h1><img src="logo-branco.png"></h1>
                 <!-- o h1 vai na tag de imagem para demarcar a importancia da logo -->
                 <nav>
                     <ul>
@@ -28,19 +30,19 @@
             <ul>
                 <li class="produtos">
                     <h2>Cabelo</h2>
-                    <img src="cabelo.jpg">
+                    <img src="cabelo.jpg" class="img-produtos">
                     <p class="produto-descricao">Na tesoura ou máquina, como o cliente preferir.</p>
                     <p class="produto-preco">R$ 25,00</p>
                 </li>
                 <li class="produtos">
                     <h2>Barba</h2>
-                    <img src="barba.jpg">
+                    <img src="barba.jpg" class="img-produtos">
                     <p class="produto-descricao">Corte e desenho profissional de barba.</p>
                     <p class="produto-preco">R$ 18,00</p>
                 </li>
                 <li class="produtos">
                     <h2>Cabelo + Barba</h2>
-                    <img src="cabelo+barba.jpg">
+                    <img src="cabelo+barba.jpg" class="img-produtos">
                     <p class="produto-descricao">Pacote completo de cabelo e barba.</p>
                     <p class="produto-preco">R$ 35,00</p>
                 </li>
