--- a/contato.html
+++ b/contato.html
@@ -8,12 +8,13 @@
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@1,600&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
             <div class="caixa">
-                <h1><img src="logo.png" alt="Logo da Barbearia Alura"></h1>
+                <h1><img src="logo-branco.png" alt="Logo da Barbearia Alura"></h1>
                 <!-- o h1 vai na tag de imagem para demarcar a importancia da logo -->
                 <nav>
                     <ul>
@@ -25,7 +26,7 @@
             </div>
         </header>
 
-        <main>
+        <main class="form-container">
             <form>
                 <label for ="nomesobrenome">Nome e sobrenome</label>
                 <input type="text" id="nomesobrenome" class="input-padrao" required>
