--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@1,600&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
             <div class="caixa">
-                <h1><img src="logo.png"></h1>
-                <!-- o h1 vai na tag de imagem para demarcar a importancia da logo -->
+                <h1><img src="logo-branco.png"></h1>
                 <nav>
                     <ul>
                         <li><a href="index.html">Home</a></li>
@@ -26,7 +26,7 @@
             </div>
         </header>
         <img class="banner" src="banner.jpg" alt="Foto da barbearia">
-        <main>
+        <main class="apresentacao">
 
             <section class="principal">
                 <h1 class="titulo-principal">Sobre a Barbearia Alura</h1>
